Fix link focus clipping behind banner cover.

--- a/assets/styles/partials/_layout.scss
+++ b/assets/styles/partials/_layout.scss
@@ -461,7 +461,7 @@ body {
 
 			#Banner {
 				margin-bottom: initial; // Reset extra mobile/portrait space.
-				top:           calc(-1 * var(--banner--forehead) - var(--typography--line-height) + var(--typography--cap) );
+				top:           calc(-1 * var(--banner--forehead) - var(--typography--line-height) + var(--typography--lead) );
 				z-index:       3;
 
 				// This trick covers blurry main content/ad from flickering through the browser UI.
@@ -471,7 +471,7 @@ body {
 					background: var(--color--background);
 					content:    '';
 					display:    block;
-					height:     calc(var(--banner--forehead) * 2 + var(--typography--lead));
+					height:     calc(var(--banner--forehead) * 2 + var(--typography--cap));
 					left:       calc(-1 * var(--outset));
 					position:   absolute;
 					right:      calc(-1 * var(--outset));
